--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/core": "^7.15.0",
     "@babel/node": "^7.14.9",
     "@babel/preset-env": "^7.15.0",
+    "domino": "^2.1.6",
     "mw-skin-builder": "file:../skins.wmflabs.org/src/starter-template"
   },
   "scripts": {
