--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "According to https://developer.wordpress.org/themes/getting-started/wordpress-licensing-the-gpl/ all Wordpress themes are GPL compliant.",
   "main": "init.js",
   "dependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/node": "^7.14.9",
-    "@babel/preset-env": "^7.15.0",
-    "domino": "^2.1.6",
-    "mw-skin-builder": "file:../skins.wmflabs.org/src/starter-template"
+    "@babel/core": "7.15.0",
+    "@babel/node": "7.14.9",
+    "@babel/preset-env": "7.15.0",
+    "domino": "2.1.6",
+    "mediawiki-skins-cli": "0.5.6"
   },
   "scripts": {
     "start": "babel-node init.mjs --experimental-json-modules"
