--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@babel/node": "7.14.9",
     "@babel/preset-env": "7.15.0",
     "domino": "2.1.6",
-    "mediawiki-skins-cli": "0.5.6"
+    "mediawiki-skins-cli": "0.5.6",
+    "unminify": "^2.0.0"
   },
   "scripts": {
     "start": "babel-node init.mjs --experimental-json-modules"
