--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wordpress-theme-to-mediawiki-skin",
-  "version": "1.1.0",
+  "version": "1.3.0",
   "description": "According to https://developer.wordpress.org/themes/getting-started/wordpress-licensing-the-gpl/ all Wordpress themes are GPL compliant.",
   "main": "init.js",
   "dependencies": {
@@ -9,7 +9,7 @@
     "@babel/preset-env": "7.15.0",
     "cssunminifier": "0.0.2",
     "domino": "2.1.6",
-    "mediawiki-skins-cli": "0.5.7",
+    "mediawiki-skins-cli": "^0.6.1",
     "unminify": "2.0.0"
   },
   "scripts": {
